# project5

./: .flake8  README.md  decorators.py  financial_operations.py  main.py  mylog.txt  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_external_api_py.html  z_a44f0ac069e85531_test_financial_operations_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test.py  test_decorators.py  test_external_api.py  test_financial_operations.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
